# otel-instrumentation-mcp

./: .env.example  .gitignore  .goreleaser.yaml  AGENTS.md  Brewfile  CACHING.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  Taskfile.yml  Tiltfile  pyproject.toml  renovate.json
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/chainguard/: semantic-release.sts.yaml
.github/workflows/: build.yml  lint.yml  pr_conventional.yml  pr_labeler.yml  release.yml  scorecard.yml  test.yml
manifests/base/: deploy.yaml  kustomization.yaml  otel-collector.yaml  redis-deployment.yaml  redis-service.yaml  service.yaml
manifests/overlays/dev/: deploy-patch.yaml  kustomization.yaml  redis-patch.yaml
manifests/overlays/local/: deploy-patch.yaml  kustomization.yaml  ns.yaml  otel-collector-patch.yaml  redis-patch.yaml
manifests/overlays/prod/: deploy-patch.yaml  redis-patch.yaml
manifests/overlays/redis/: deploy-patch.yaml  (+1 more)
otel_instrumentation_mcp/: __init__.py  autoinstrumentation_prompt.py  cache.py  code_analysis_prompt.py  custom_instrumentation_prompt.py  github_app_auth.py  github_issues.py  instrumentation_score.py  instrumentation_score_prompt.py  main.py  mcp_instrumentation_middleware.py  network_utils.py  opentelemetry_docs.py  opentelemetry_examples.py  opentelemetry_repos.py  repo_configs.py  semantic_conventions.py  telemetry.py  version_resolver.py
tests/: __init__.py  test_cache.py  test_integration_simple.py  test_main.py  test_network_utils.py  test_rate_limiting.py  test_version_resolver.py
